--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,77 @@
+anyio==4.6.0
+appdirs==1.4.4
 asgiref==3.8.1
+attrs==24.2.0
+backoff==2.2.1
+boilerpy3==1.0.7
+cattrs==24.1.2
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+cryptography==43.0.1
 Django==5.1.1
+django-allauth==65.0.1
+django-cors-headers==4.4.0
+django-environ==0.11.2
+djangorestframework==3.15.2
+docopt==0.6.2
+environ==1.0
+Events==0.5
+farm-haystack==1.26.3
+filelock==3.16.1
+fsspec==2024.9.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
+huggingface-hub==0.25.1
+idna==3.10
+inflect==7.4.0
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jwt==1.3.1
+lazy-imports==0.3.1
+monotonic==1.6
+more-itertools==10.5.0
+networkx==3.3
+num2words==0.5.13
+numpy==2.1.1
+oauthlib==3.2.2
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+platformdirs==4.3.6
+posthog==3.6.6
+prompthub-py==4.0.0
+pycparser==2.22
+pydantic==1.10.18
+PyJWT==2.9.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+quantulum3==0.9.2
+rank-bm25==0.2.2
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+requests-cache==0.9.8
+requests-oauthlib==2.0.0
+rpds-py==0.20.0
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+six==1.16.0
+sniffio==1.3.1
 sqlparse==0.5.1
+sseclient-py==1.8.0
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tiktoken==0.7.0
+tokenizers==0.15.2
+tqdm==4.66.5
+transformers==4.39.3
+typeguard==4.3.0
+typing_extensions==4.12.2
+tzdata==2024.2
+url-normalize==1.4.3
+urllib3==2.2.3
