--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,86 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Django
+db.sqlite3
+/media/
+
+.env
+
+.env
+myenv
+
+# Python
+*.py[cod]
+__pycache__/
+*.so
+*.egg
+*.egg-info/
+*.pyo
+*.pyd
+*.log
+
+# Virtual environments
+venv/
+env/
+myenv/
+
+# Django specific
+/media/         # User-uploaded files
+/static/        # Static files (if served locally)
+*.sqlite3       # SQLite database (if using)
+db.sqlite3      # Another SQLite database name
+*.log           # Log files
+*.pot           # Translation files
+*.pyc           # Python compiled files
+*.pyo           # Python optimized files
+__pycache__/    # Python cache
+local_settings.py  # Custom local settings (if applicable)
+
+# Migrations
+**/migrations/  # Only ignore migrations if you plan to generate them elsewhere
+
+# Environment variables
+.env            # Store secret keys, tokens, etc.
+
+# Frontend (Node.js)
+node_modules/   # Node.js modules
+.next/          # Next.js build files
+out/            # Static output directory
+npm-debug.log*  # NPM debug logs
+yarn-error.log* # Yarn error logs
+.pnpm-debug.log* # pnpm debug logs
+
+# Test files (optional, if you don’t want to sync them)
+**/tests/       # Ignore all test directories
+*.test.js       # Ignore individual test files
+*.test.ts       # For TypeScript test files
+
+# Docker
+*.env           # Environment variables for Docker
+*.env.*         # Additional env files
+.dockerignore   # Ignore Docker ignore files
+
+# IDEs
+.vscode/        # VS Code workspace settings
+.idea/          # IntelliJ project settings
+*.sublime-workspace  # Sublime project workspace
+*.sublime-project   # Sublime project file
+
+# OS-generated files
+.DS_Store       # macOS Finder metadata
+Thumbs.db       # Windows file
+
+
+# Node.js dependencies
+node_modules/
+
+# TypeScript build output
+.next/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
