--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.8",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
